Remove yup and use open api validator
