# src/app.ts
@@ -2,13 +2,13 @@ import { json, urlencoded } from 'body-parser';
 import cors from 'cors';
 import express, { Request } from 'express';
 import { initialize } from 'express-openapi';
+import * as OpenApiValidator from 'express-openapi-validator';
 import { Path } from 'express-unless';
 
 import { authenticate, basicAuthentication } from './core/auth';
-import { StatusCode } from './models';
-import * as health from './modules/health/routes';
-import * as items from './modules/items/routes';
-import * as user from './modules/user/routes';
+import * as health from './modules/health/operations';
+import * as items from './modules/items/operations';
+import * as user from './modules/user/operations';
 
 const unprotectedUrls: Path[] = [
     { url: '/health', methods: ['GET'] },
@@ -23,20 +23,30 @@ app.use(cors());
 app.use(json());
 app.use(urlencoded({ extended: true }));
 app.use(authenticate.unless({ path: unprotectedUrls }));
-
-// Error handling for invalid token.
-app.use((err, req, res, next) => {
-    if (err.name === 'UnauthorizedError' && !!next) {
-        res.status(StatusCode.Unauthorized).send({ message: 'Invalid/Missing token' });
-    }
+app.use(
+    OpenApiValidator.middleware({
+        apiSpec: './docs/api_spec.yaml',
+        validateRequests: {
+            // Remove unknown properties from request body
+            removeAdditional: 'all',
+        },
+        validateResponses: true,
+    })
+);
+app.use((err, req, res, _) => {
+    // format error
+    res.status(err.status).json({
+        status: err.status,
+        message: err.message,
+        errors: err.errors,
+    });
 });
-
-app.use('/health', health.routes);
 
 initialize({
     app,
     apiDoc: './docs/api_spec.yaml',
     operations: {
+        ...health.operations,
         ...user.operations,
         ...items.operations,
     },
